melhorando responsividade do frontend, adicionando Toast para comunicar sucesso ao tentar realizar alguma ação da API

--- a/frontend/src/pages/styles/homepage.module.css
+++ b/frontend/src/pages/styles/homepage.module.css
@@ -23,6 +23,10 @@
     margin: 10px;
 }
 
+.kendoGrid {
+    margin-top: 50px;
+}
+
 .modalStyle {
     position: 'absolute' as 'absolute';
     top: '50%';
